matched tiles on both pages and made them smaller. matched labels that were weird sizes as well

--- a/app/views/mCampaigns.html
+++ b/app/views/mCampaigns.html
@@ -54,7 +54,8 @@
 				<span style="font-size: 10px; padding-left: 10px;" class="sr-only" [innerHTML]="budgetPercent(cmp)">40%</span>
 		</div>
 	</div>
-	<span class="label" style="background-color: #34495e; border-radius: 3px; color:#fff; padding: 4px; font-size: 10px;">Spent of monthly</span> | <span style="background-color: #04be5b; border-radius: 3px; color:#fff; padding: 4px; font-size: 10px;" class="label label-success">Total remaining budget</span>
+	<span class="label label-success" style="background-color: #34495e; border-radius: 3px; color:#fff; padding: 4px; font-size: 10px; line-height: initial;">Spent of monthly</span> |
+	<span class="label label-success" style="background-color: #04be5b; border-radius: 3px; color:#fff; padding: 4px; font-size: 10px;">Total remaining budget</span>
 
 </div>
 <div class="clearfix"></div>
