--- a/app/views/reporting.html
+++ b/app/views/reporting.html
@@ -57,41 +57,41 @@
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Est Views</div>
-	<p>{{ curWeek.views || 'N/A' }}</p>
+	<p>{{ lastMonth.views | fmtNum:'N/A' }}</p>
 </div>
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Engagements</div>
-	<p>{{ curWeek.engagements || 'N/A' }}</p>
+	<p>{{ lastMonth.engagements | fmtNum:'N/A' }}</p>
 </div>
 
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Influencers Used</div>
-	<p>{{ curWeek.infs || 'N/A' }}</p>
+	<p>{{ lastMonth.infs | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Spent</div>
-	<p>${{ (curWeek.spent || 0).toFixed(2) }}</p>
+	<p>${{ (lastMonth.spent || 0).toFixed(2) }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Likes</div>
-	<p>{{ curWeek.likes || 'N/A' }}</p>
+	<p>{{ lastMonth.likes | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Clicks</div>
-	<p>{{ curWeek.clicks || 'N/A' }}</p>
+	<p>{{ lastMonth.clicks | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Comments</div>
-	<p>{{ curWeek.comments || 'N/A' }}</p>
+	<p>{{ lastMonth.comments | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Shares</div>
-	<p>{{ curWeek.shares || 'N/A' }}</p>
+	<p>{{ lastMonth.shares | fmtNum:'N/A' }}</p>
 </div>
 <div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader"><div class="statTileCircleGreen"></div> Perks Sent</div>
-	<p>{{ curWeek.perks || 'N/A' }}</p>
+	<p>{{ lastMonth.perks | fmtNum:'N/A' }}</p>
 </div>
 <!--<div class="grid-23 mobile-grid-100 grid-parent statTile">
 	<div class="statTileHeader">
