--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3050,3 +3050,61 @@ input[type="file"] {
 	width: 110px;
 	padding-left:5px;
 }
+
+
+.infList .inf {
+	height: 64px;
+}
+
+.infList .inf img {
+	vertical-align: middle;
+	width: 64px;
+	height: 64px;
+	text-indent: -10000px;
+	background: #494c5d;
+}
+
+.infList .inf span, .infList .inf a {
+	display: inline-block;
+	padding-left:5px;
+	font-weight: 500;
+}
+
+.infList .inf a {
+	width: 180px;
+}
+
+.infList .inf span.numFollowers {
+	width: 140px;
+}
+
+
+.infList .inf button {
+	float: right;
+	margin-top: 15px;
+	margin-right: 5px;
+}
+
+/* hack for performance in the list */
+.infList .inf > button + button {
+	display: none;
+}
+
+infList.inf button.btn-green1 {
+	width: 231px;
+}
+
+.loader {
+	border: 16px solid #f3f3f3; /* Light grey */
+	border-top: 16px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+	margin: 0 auto;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
