--- a/app/views/createCampaign.html
+++ b/app/views/createCampaign.html
@@ -349,8 +349,11 @@
 	</div>
 
 	<ul class="cat-status">
-		<li *ngIf="forecast.breakdown?.length">
-			<div class="inf-reach grid-100 mobile-grid-100">
+		<li>
+			<div class="inf-reach grid-100 mobile-grid-100" *ngIf="forecast.loading">
+				<loader size="70px"></loader>
+			</div>
+			<div class="inf-reach grid-100 mobile-grid-100" *ngIf="!forecast.loading">
 				<div *ngFor="let inf of forecast.breakdown" class="inf">
 					<img [src]=inf.profilePicture> <span [title]=inf.name>{{ inf.name | trunc:16 }}</span> <b>|</b> Fans: {{inf.followers | fmtNum}}
 				</div>
