fix broken est-reach images

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3043,6 +3043,8 @@ input[type="file"] {
 .inf-reach .inf img {
 	vertical-align: middle;
 	width: 32px;
+	text-indent: -10000px;
+	background: #494c5d;
 }
 
 .inf-reach .inf span {
