--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3073,7 +3073,7 @@ input[type="file"] {
 }
 
 .infList .inf a {
-	width: 180px;
+	width: 140px;
 }
 
 .infList .inf span.numFollowers {
@@ -3092,6 +3092,6 @@ input[type="file"] {
 	display: none;
 }
 
-infList .inf button.btn-green1 {
+.infList .inf > .btn-green1 {
 	width: 231px;
 }
